<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.zendaimoney.coreaccount</groupId>
	<artifactId>CoreAccount</artifactId>
	<packaging>pom</packaging>
	<name>CoreAccount :: Module :: Parent</name>
	<version>1.0.8</version>
	<organization>
		<name>Zendai</name>
		<url>http://www.zendai.com/</url>
	</organization>
<!-- 	<modules>
		<module>CoreAccount-service</module>
		<module>CoreAccount-front</module>
		<module>CoreAccount-sample</module>
		<module>CoreAccount-client</module>
	</modules> -->
	
	<modules>
    <module>CoreAccount-client</module>
    <module>CoreAccount-service</module>
    <module>CoreAccount-front</module>
    <module>CoreAccount-sample</module>
  </modules>

	<properties>
		<!-- 主要依赖库的版本定义 -->
		<activemq.maven.artifact.version>5.7.0</activemq.maven.artifact.version>
		<spring.version>3.1.1.RELEASE</spring.version>
		<hibernate.version>4.1.3.Final</hibernate.version>
		<ehcache.version>2.5.2</ehcache.version>
		<hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
		<jackson.version>2.2.0</jackson.version>
		<spymemcached.version>2.8.1</spymemcached.version>
		<commons-lang3.version>3.1</commons-lang3.version>
		<commons-io.version>2.3</commons-io.version>
		<guava.version>17.0</guava.version>
		<joda-time.version>2.1</joda-time.version>
		<dozer.version>5.3.2</dozer.version>
		<freemarker.version>2.3.19</freemarker.version>
		<poi.version>3.8</poi.version>
		<slf4j.version>1.6.4</slf4j.version>
		<h2.version>1.3.166</h2.version>
		<junit.version>4.10</junit.version>
		<mockito.version>1.9.0</mockito.version>
		<powermock.version>1.4.12</powermock.version>
		<selenium.version>2.21.0</selenium.version>
		<!-- Plugin的属性定义? -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.6</jdk.version>
	</properties>

	<!-- 插件配置 -->
	<build>
		<pluginManagement>
			<plugins>
				<!-- compiler插件, 设定JDK版本 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<showWarnings>true</showWarnings>
					</configuration>
				</plugin>

				<!-- resource插件 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.5</version>
				</plugin>

				<!-- test插件, 仅测试名称为*Test的类,使用支持分组测试的surefire-junit47 driver -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<argLine>-Xms1024m -Xmx1024m -XX:PermSize=256M -XX:MaxPermSize=256M</argLine>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.surefire</groupId>
							<artifactId>surefire-junit47</artifactId>
							<version>2.12</version>
						</dependency>
					</dependencies>
				</plugin>

				<!-- 增加更多的Source和Test Source目录插件 -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
				</plugin>

				<!-- cobertura 测试覆盖率统计插�? -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>

				<!-- war打包插件, 设定war包名称不带版本号 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<warName>${project.artifactId}</warName>
					</configuration>
				</plugin>


				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
				</plugin>

				<!-- clean插件 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>

				<!-- install插件 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>

				<!-- eclipse插件,设定下载Source -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<downloadSources>true</downloadSources>
						<downloadJavadocs>false</downloadJavadocs>
					</configuration>
				</plugin>

				<!-- dependency相关插件 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>1.3.1</version>
				</plugin>

				<!-- ant插件 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.7</version>
				</plugin>

				<!-- exec java 插件 -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.2.1</version>
				</plugin>

				<!-- sonar插件 -->
				<plugin>
					<groupId>org.codehaus.sonar</groupId>
					<artifactId>sonar-maven3-plugin</artifactId>
					<version>3.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- 如有Nexus私服, 取消注释并指向正确的服务器地url -->
	<repositories>
		<repository>
			<id>nexus</id>
			<name>Team Nexus Repository</name>
			<url>http://nexus.yuminsoft.local/content/groups/public</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Internal Releases</name>
			<url>http://nexus.yuminsoft.local/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Snapshots</name>
			<url>http://nexus.yuminsoft.local/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>